# membership-testing

./: Cargo.toml  ComputeAccumulator.py  GenerateWitness.py  emails.txt
compute_accumulator/: Cargo.toml
compute_accumulator/src/: main.rs
generate_witness/: Cargo.toml
generate_witness/src/: main.rs
py/: GenerateWitness.py  VerifyMembership.py
verify_membership/: Cargo.toml
verify_membership/src/: main.rs
