[package]
name = "membership-testing"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "compute_accumulator"
path = "compute_accumulator/src/main.rs"

[[bin]]
name = "generate_witness"
path = "generate_witness/src/main.rs"

[[bin]]
name = "verify_membership"
path = "verify_membership/src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-primes = "0.3.0"
rug = "1.19.2"
sha2 = "0.10.6"
rand = "0.8.5"
